<resources>
    <string name="app_name">WhatToWatchOrRead</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">or</string>
    <string name="log_in">Log In</string>
    <string name="register_now">Register now</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="title_activity_main_two">MainTwoActivity</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="authorization">Authorization</string>
    <string name="hello">Hello</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_news">News</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="you">You</string>
    <string name="friends">Friends</string>
    <string name="logout">Logout</string>
    <string name="logout_of_your_account">Logout of your account</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="sort">Sort</string>
    <string name="enter_a_search_query">Enter a search query</string>
    <string name="title">Title</string>
    <string name="secondary_text">Secondary text</string>
    <string name="supporting_text">Supporting text</string>
    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="delete_from_bookmarks">Delete from bookmarks</string>
    <string name="agerating">AgeRating</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="genres">Genres</string>
    <string name="_100">100%</string>
    <string name="email">Email</string>
    <string name="ok">OK</string>
    <string name="title_top">Top</string>
    <string name="_999">999</string>


</resources>
