<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/baseline_settings_black_24dp"
        android:title="@string/settings"
        android:contentDescription="@string/account_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/baseline_sort_black_24dp"
        android:title="@string/sort"
        android:contentDescription="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/baseline_exit_to_app_black_24dp"
        android:title="@string/logout"
        android:contentDescription="@string/logout_of_your_account"
        app:showAsAction="never" />

</menu>