<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="by.tms.whattowatchorread.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_bottom_search" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="by.tms.whattowatchorread.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bottom_bookmark" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="by.tms.whattowatchorread.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_bottom_news" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="by.tms.whattowatchorread.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_bottom_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="by.tms.whattowatchorread.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_bottom_notifications" />
</navigation>
