<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MyThemeIsMaterialDesign.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextAuthorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextAuthorizationForgotPasswordTitle"
        style="@style/MyThemeIsMaterialDesign.Authorization.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextAuthorization"
        android:layout_margin="@dimen/margin_8"
        android:hint="@string/enter_your_email"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/list_item_icon_size_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/buttonOkLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextAuthorizationForgotPasswordTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="@dimen/padding_8"
        android:text="@string/ok"/>


</RelativeLayout>