<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardApp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Media -->
        <FrameLayout
            android:id="@+id/viewImageLarge"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_image"
            android:background="@drawable/shape_rectangle_card">

            <ImageView
                android:id="@+id/cardAppImageLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_2"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/cardAppAgeRatingLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/padding_8"
                android:text="@string/agerating"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cardAppRatingLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginTop="@dimen/padding_8"
                android:layout_marginStart="40dp"
                android:gravity="center"
                android:text="@string/_100"
                android:textColor="@color/color_rating"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageRatingPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/item_size_rating"
                android:layout_margin="@dimen/margin_8"
                />

        </FrameLayout>


        <RelativeLayout
            android:id="@+id/cardTextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewImageLarge"
            android:background="@drawable/shape_rectangle_card"
            android:padding="@dimen/padding_16">



                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/cardAppTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/cardAppSecondaryTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardAppTitleLarge"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/secondary_text"
                    android:textAppearance="?attr/textAppearanceBody2" />
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardAppSecondaryTextLarge">

                <TextView
                    android:id="@+id/cardAppSupportingTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/supporting_text"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </ScrollView>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/cardChipLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardTextLarge"
            android:background="@drawable/shape_rectangle_card">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textGenresLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:text="@string/genres"
                    android:textAllCaps="true"
                    android:textColor="@color/textForViewAuthorization"
                    android:textSize="@dimen/text_size_14" />

            </HorizontalScrollView>

        </RelativeLayout>


        <!-- Buttons -->
        <RelativeLayout
            android:id="@+id/cardAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardChipLarge"
            android:background="@drawable/shape_rectangle_card"
            android:padding="@dimen/padding_8">

            <Button
                android:id="@+id/buttonLike"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/margin_8"
                android:background="@drawable/item_size_like"
                />

            <TextView
                android:id="@+id/textLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_999"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_alignBaseline="@id/buttonLike"
                android:layout_alignParentStart="@id/buttonLike"
                android:layout_marginStart="70dp"/>

            <CheckBox
                android:id="@+id/checkBookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/bookmarks"
                android:textSize="20sp"
                android:layout_margin="@dimen/margin_8"
                android:button="@drawable/selector_item_check"/>

        </RelativeLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
