<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardAppLarge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Media -->
        <FrameLayout
            android:id="@+id/viewImageLarge"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_image"
            android:background="@drawable/shape_rectangle_card">

            <ImageView
                android:id="@+id/cardAppImageLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_2"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/cardAppAgeRatingLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/padding_8"
                android:text="@string/agerating"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cardAppRatingLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_margin="@dimen/padding_8"
                android:textColor="@color/color_rating"
                android:textSize="@dimen/size_text_rating"
                android:textStyle="bold"
                android:text="@string/_100"
                android:gravity="center"
                android:background="@drawable/item_size_rating"/>

        </FrameLayout>

        <ScrollView
            android:id="@+id/cardTextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewImageLarge">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectangle_card"
                android:padding="@dimen/padding_16">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/cardAppTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/cardAppSecondaryTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardAppTitleLarge"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/secondary_text"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <TextView
                    android:id="@+id/cardAppSupportingTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardAppSecondaryTextLarge"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/supporting_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    />
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/cardChipLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardTextLarge"
            android:background="@drawable/shape_rectangle_card">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textGenresLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textSize="@dimen/text_size_14"
                    android:textAllCaps="true"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:layout_marginStart="@dimen/margin_24"
                    android:textColor="@color/textForViewAuthorization"/>

            </HorizontalScrollView>

        </RelativeLayout>


        <!-- Buttons -->
        <RelativeLayout
            android:id="@+id/cardSeason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardChipLarge"
            android:background="@drawable/shape_rectangle_card"
            android:padding="@dimen/padding_8">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSearchCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>